--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
       <canvas id="canvas"></canvas>
       <div class="instructions">
         When it's your turn, place a ring on the board adjacent to other objects
-        with your color (or anywhere, if you haven't placed anything yet). When
-        you've placed 3 rings in a row, you must combine them into a tower. And
-        likewise, 3 towers make a laser.
+        with your color (or anywhere, if you don't have any objects on the
+        board). When you've placed 3 rings in a row, you must combine them into
+        a tower. And likewise, 3 towers make a laser.
       </div>
 
       <div class="instructions">
